# many-tapes-calculator

./: PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.claude/: settings.local.json
assets/: index-AV1Nko_D.js  index-B0fX-Nzj.css  index-B0hzfqDh.css  index-B4Uiu6zT.js  index-B8VG9oUZ.css  index-BBtKe4dj.js  index-BIfNsyaP.css  index-BPgwh7Q8.js  index-BlCsp1v1.js  index-Bqkjwh8P.js  index-BvRB3Cim.js  index-CIJbSmnV.js  index-CMlrAMxw.js  index-CuX76hSV.js  index-D5cDxSHQ.css  index-Dk19O2DN.js  index-Dq494nv2.js  index-DydR9RSM.js  index-SMAWtQUM.js  index-SkgpQoLY.js  index-XBjFxC_h.css  index-a6eewRjf.js  index-l6MqKMB8.css
shared/: calculate.js  defaults.js  ids.js  package.json  reducer.js  schemas.js
src/: App.jsx  App.module.css  main.jsx
src/components/AccountSwitcher/: AccountSwitcher.jsx  AccountSwitcher.module.css
src/components/NumberInput/: NumberInput.jsx  NumberInput.module.css
src/components/SummaryTape/: SummaryTape.jsx
src/components/Tape/: Tape.jsx  Tape.module.css
src/components/TapeEntry/: TapeEntry.jsx  TapeEntry.module.css
src/components/TapeSwitcher/: TapeSwitcher.jsx  TapeSwitcher.module.css
src/hooks/: useAppState.js  useSync.js
src/lib/: format.js  ids.js  saves.js  storage.js
src/schemas/: account.js  tape.js
src/styles/: reset.css  variables.css
tui/: pyproject.toml
tui/src/mtcalc/: __init__.py  __main__.py  app.py  calculate.py  format.py  saves.py  state.py  storage.py
tui/src/mtcalc/widgets/: __init__.py  sidebar.py  status_line.py  tape_view.py
(+1 files in other folders)
