[project]
name = "mtcalc"
version = "0.1.0"
description = "Many Tapes Calculator — Textual TUI"
requires-python = ">=3.10"
dependencies = [
    "textual>=1.0.0",
]

[project.scripts]
mtcalc = "mtcalc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mtcalc"]
